# MusicService

./: CMakeLists.txt  Dockerfile  README.md  SberMusic.md  docker-compose.yml
Database/: ipv65B15D51672.json
Include/: Client.hpp  Playlist.hpp  Server.hpp  Song.hpp
Source/: Playlist.cpp  Song.cpp  main.cpp  test.cpp
Source/Client/: client.cpp  main_client.cpp
Source/Server/: Playlist.cpp  main_server.cpp  server.cpp
execute_binary/: check
protos/: playlist.grpc.pb.cc  playlist.grpc.pb.h  playlist.pb.cc  playlist.pb.h  playlist.proto
